--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   buttons_tabbar: ^1.3.8
   hive_generator: ^2.0.1
   build_runner: ^2.4.7
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
